--- a/src/views/file.ejs
+++ b/src/views/file.ejs
@@ -76,7 +76,7 @@
                 </div>
             </section>
 
-            <div class="flex-1 aspect-square invisible bg-gray-100 rounded-lg flex items-center md:visible justify-center shadow text-9xl px-5 py-10">
+            <div class="flex-1 aspect-square hidden bg-gray-100 rounded-lg md:flex items-center md:visible justify-center shadow text-9xl px-5 py-10">
             <% if (file.ext) { %>
                 <% if (['.png','.jpeg','.webp','.bmp','.gif','.svg'].includes(file.ext)) { %>
                 <i class="fa fa-image text-gray-400 "></i>
