feat: add searching for user files and folders
Now the user can search through his files and folders
for quick access.

 * feat: create search view

 * feat: add search results layouts

 * feat: add search GET endpoint for drive

 * feat: set search form action and search param name

--- a/src/views/components/item-with-actions.ejs
+++ b/src/views/components/item-with-actions.ejs
@@ -51,9 +51,9 @@
   </a>
   <div
     id="<%= type %>-options-<%= item.id %>"
-    class="hover:bg-gray-400 p-1 rounded z-50"
+    class="hover:bg-gray-400 p-1 rounded"
   >
-    <drop-down aria-label="<% type %> options">
+    <drop-down aria-label="<% type %> options" class="z-99">
       <drop-down-action aria-label="Rename" class="bg-gray-100 shadow-md">
         <a
           onclick="startEditFromOptions(event, '<%= type %>', '<%= item.id %>' );"
