--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -72,34 +72,13 @@
                 </li>
             </ul>
         </aside>
+
         <main class="flex flex-col gap-5 md:col-start-2 md:row-span-full md:col-span-3">
 
             <nav class="bg-violet-200 border border-violet-100 px-5 md:px-10 py-5 rounded flex flex-col gap-5">
                 <section class="flex md:flex-wrap flex-wrap-reverse justify-between items-center gap-y-2">
-                    <div id="breadcrumbs" class="font-semibold">
-                            <a href="/drive">
-                                <u>My drive</u>
-                            </a>
-                        <% if (locals.currentFolder) { %>
-                            > 
-                            <% if (!locals.folders.some(f=> f.id === locals.currentFolder.id)) { %>
-                                ... >
-                            <% } %>
-                            <% for(let currentDir = currentFolder.parentFolder; currentDir; currentDir = currentDir.parentFolder) { %>
-                                <a href="/drive/folder/<%= currentDir.id %>">
-                                    <u>
-                                        <%- currentDir.name %>
-                                    </u>
-                                </a>
-                                >
-                            <% } %>
-                            <span>
-                            <%- currentFolder.name %> 
-                            </span>
-                        <% } %>
-                    </div>
                     <form action="/drive/search" method="get" class="flex flex-wrap gap-2 items-center">
-                        <input class="grow border rounded-lg px-3 py-2 max-w-sm" required minlength="1" type="search" name="q" placeholder="Search...">
+                        <input class="grow border rounded-lg px-3 py-2 max-w-sm" type="search" required minlength="1" value="<%= searchTerm %>" name="q" placeholder="Search ...">
                         <button class=" grow rounded-md bg-indigo-600 hover:bg-indigo-500 px-4 py-2 text-sm font-semibold text-white">
                             <i class="fa fa-search"></i>
                         </button>
@@ -107,51 +86,21 @@
                 </section>
                 <section class="flex md:flex-wrap flex-wrap justify-between items-center gap-y-3">
                     <div class="flex flex-wrap gap-5 items-center gap-y-3">
-                        <div
-                        class= " text-gray-600  border-gray-400 bg-white  text-md rounded-lg border px-4 py-2 cursor-pointer"
-                        >
-                            <div role="button" id="add-subdir-button" onclick="startEditFromClick('subdir');" class="flex items-center justify-center gap-3">
-                                <i class="fa fa fa-plus"></i>
-                                <span class="font-semibold">New Folder</span>
-                            </div>
-                            <form id="add-subdir-form" class="max-w-full flex flex-wrap items-center gap-2" hidden action="<%= locals.currentFolder ? `/drive/folder/${currentFolder.id}/create` : '/drive/folder/create'%>" method="post">
-                                <label class="sr-only" for="add-subdir-name">Folder name:</label>
-                                <input id="add-subdir-name" placeholder="New Folder Name..." type="text" maxlength="20" name="folder" class="shrink flex-1 max-w-[100%] border rounded-sm border-gray-400" >
-                                <div class="flex-1 flex gap-3">
-
-                                <button type="submit" aria-label="Confirm button"
-                                class="flex-1/2 border border-violet-400 rounded-sm p-1 hover:bg-green-500" >
-                                    <i class="fa fa-solid fa-check"></i>
-                                </button>
-                                <button type="button" aria-label="Cancel button" onclick="cancelEditSelectedFromClick('subdir')"
-                                id="close-subdir-form-button" class="flex-1/2 border border-violet-400 rounded-sm p-1 hover:bg-red-500">
-                                    <i class="fa fa-solid fa-times"></i>
-                                </button>
-                                </div>
-                            </form>
-                        </div>
-
-                        <% if (locals.currentFolder) { %>
-                            <div role="button" onclick="document.getElementById('fileInput').click();" class= "text-white bg-indigo-600 hover:bg-indigo-500 text-md rounded-lg border px-4 py-2 cursor-pointer">
-                                <div class=" flex items-center justify-center gap-3">
-                                    <i class="fa fa-upload "></i>
-                                    <span class="font-semibold ">Upload file</span>
-                                </div>
-                                <form id="fileUploadForm" action="/drive/folder/<%= locals.currentFolder.id %>/upload" method="post" enctype="multipart/form-data">
-                                    <input id="fileInput" name="file" type="file" hidden onchange="this.closest('form').submit()">
-                                </form>
-                            </div>
-                        <% } %>
+                        <% if(locals.searchResults) {  %>
+                            <%= searchResults.files?.length + searchResults.folders?.length %> results found
+                        <% } else { %>
+                            <span>0 search results.</span>
+                        <%    } %>
                     </div>
                     <div class="flex gap-3">
-                        <a href="<%= url %>?layout=grid" title="Grid Layout" >
+                        <a href="<%= url %>?layout=grid&q=<%= searchTerm %>" title="Grid Layout" >
                             <button aria-label="Change Layout to Grid" class="p-1 px-2
                              <%= locals.layout === 'grid' ? 'bg-indigo-500' : 'bg-violet-300 hover:bg-violet-400' %>
                              ">
                                 <i class="fa fa-th"></i>
                             </button>
                         </a>
-                        <a href="<%= url %>?layout=list" title="Listview Layout">
+                        <a href="<%= url %>?layout=list&q=<%= searchTerm %>" title="Listview Layout">
                             <button aria-label="Change Layout to Listview" class="p-1 px-2
                              <%= locals.layout === 'list' ? 'bg-indigo-500' : 'bg-violet-300 hover:bg-violet-400' %>
                              ">
@@ -162,9 +111,9 @@
                 </section>
             </nav>
             <% if(locals.layout === 'list') { %>
-                 <%- include('./layouts/drive/list-view.ejs') %>
+                 <%- include('./layouts/search/list-view.ejs') %>
             <% } else { %>
-                 <%- include('./layouts/drive/grid.ejs') %>
+                 <%- include('./layouts/search/grid.ejs') %>
             <% } %>
         </main>
     </div>
